[project]
name = "sabrina"
version = "0.1.0"
description = "sabrina"
authors = [
    {name = "", email = ""},
]
dependencies = ["typer>=0.15.2", "loguru>=0.7.3", "scheduler>=0.8.8", "ccxt>=4.4.75", "questdb>=2.0.4", "ruff>=0.11.6"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
